8210810: Escaped character at specific position in argument file is not handled properly

Reviewed-by: alanb